--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
+                <div class="mbr-section col-md-10">
 
                     <h1 class="mbr-section-title display-1">Gilles Van Bever</h1>
                     <p class="mbr-section-lead lead">Grafisch Ontwerp<br>Gent</p>
@@ -46,7 +46,7 @@
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
